--- a/vidyaras_app/android/app/src/main/AndroidManifest.xml
+++ b/vidyaras_app/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Internet permission required for OTP and API calls -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:label="vidyaras_app"
         android:name="${applicationName}"
