--- a/vidyaras_app/android/app/src/main/AndroidManifest.xml
+++ b/vidyaras_app/android/app/src/main/AndroidManifest.xml
@@ -45,5 +45,11 @@
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
         </intent>
+
+        <!-- Query intent for phone calls -->
+        <intent>
+            <action android:name="android.intent.action.DIAL" />
+            <data android:scheme="tel" />
+        </intent>
     </queries>
 </manifest>
