--- a/vidyaras_app/pubspec.yaml
+++ b/vidyaras_app/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   intl: ^0.20.2
   url_launcher: ^6.2.0
   permission_handler: ^11.0.0
+  share_plus: ^10.1.4
 
   # Icons
   cupertino_icons: ^1.0.8
