feat: enhance course detail screen and data model alignment Course Model & Data Layer: - Add missing fields to Course model: whatYouLearn, courseIncludes,   prerequisites, language, hasCertificate, hasQuizzes, hasMaterials - Regenerate Freezed/JSON serialization files for Course model - Update HomeRemoteDataSource to map new course fields from Supabase - Update CoursesRemoteDataSource with improved error handling Course Detail Screen: - Display "What You'll Learn" section with bullet list - Display "Course Includes" section with icons - Display "Prerequisites" section - Show language, certificate, quizzes, and materials indicators - Make reviews section conditional (hidden when no reviews) Courses Screen & Routing: - Update AllCoursesScreen with improved category filtering - Add category query parameter support to /courses route - Minor import and navigation cleanup My Learning: - Fix CourseMaterial model field naming (fileSizeMb) - Update materials tab content for field name consistency - Update MyLearningRemoteDataSource mapping Documentation & Schema: - Add courses_data_model_audit.md documenting schema alignment - Add vidyaras.sql database schema export for reference Chores: - Update .gitignore patterns

--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ docs/mockups/
 !*.env.example
 
 # SQL files (migrations should be in supabase/migrations/)
-*.sql
+# *.sql
 !supabase/migrations/*.sql
 
 # Firebase
