feat: Implement edge-to-edge UI, update typography to Google Fonts Outfit, and refactor home screen with new hero and section header widgets.

--- a/vidyaras_app/pubspec.yaml
+++ b/vidyaras_app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_svg: ^2.0.0
   cached_network_image: ^3.3.0
   fl_chart: ^0.68.0
+  google_fonts: ^6.2.1
 
   # State Management
   flutter_riverpod: ^2.5.0
