--- a/vidyaras_app/pubspec.yaml
+++ b/vidyaras_app/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   font_awesome_flutter: ^10.12.0
   change_app_package_name: ^1.5.0
   flutter_launcher_icons: ^0.14.4
+  youtube_player_flutter: ^9.1.3
 
 dev_dependencies:
   flutter_test:
